solved logo bug and collapse wrapper fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,6 +39,14 @@ a {
   outline: none;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 @media only screen and (max-width: 920px) {
   html {
     font-size: 15px;
